--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.1.1"
+    "astro": "^3.1.1",
+    "astro-icon": "^0.8.1"
   }
 }
