--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "astro": "^3.1.1",
-    "astro-icon": "^0.8.1"
+    "astro-icon": "^0.8.1",
+    "font-awesome": "^4.7.0"
   }
 }
