--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "astro": "^3.1.4",
     "astro-icon": "^0.8.1",
+    "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0"
   }
 }
