--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^6.0.3",
     "astro": "^3.1.4",
     "astro-icon": "^0.8.1",
     "bootstrap": "^5.3.2",
